# ratestask

./: .env  .gitignore  Dockerfile.flask  README.md  docker-compose.yml  pyproject.toml
app/: __init__.py  config.py  queries.py  routes.py
app/services/: rates_service.py
app/utils/: helpers.py  validators.py
tests/: conftest.py  test_rates_api.py  test_setup.py  test_validators.py
